# OpenCV3-Intro-Example

./: CMakeLists.txt  README.md
chapter10/86_cornerHarris/: 86_cornerHarris.cpp
chapter10/87_goodFeaturesToTrack/: 87_goodFeaturesToTrack.cpp
chapter10/88_cornerSubPix/: 88_cornerSubPix.cpp
chapter2/: CmakeLists.txt
chapter2/8_CamShiftDemo/: 8_CamShiftDemo.cpp
chapter3/16_LoadShowOutputImage/: 16_LoadShowOutputImage.cpp
chapter4/19_UseMat/: 19_UseMat.cpp
chapter4/20_DrawImage/: 20_DrawImage.cpp
chapter5/21_UsePointerAccessPixel/: 21_UsePointerAccessPixel.cpp
chapter5/22_UseIteratorAccessPixel/: 22_UseIteratorAccessPixel.cpp
chapter5/23_UseAtAccessPixel/: 23_UseAtAccessPixel.cpp
chapter5/24_14WaysToAccessPixel/: 24_14WaysToAccessPixel.cpp
chapter5/25_ImageBlending/: 25_ImageBlending.cpp
chapter5/28_DFT/: 28_DFT.cpp
chapter6/37_ImageFiltering/: 37_ImageFiltering.cpp
chapter6/40_dilate_and_erode/: 40_dilate_and_erode.cpp
chapter6/45_Gradient/: 45_Gradient.cpp
chapter6/48_Morphology/: 48_Morphology.cpp
chapter6/50_floodFill2/: 50_floodFill2.cpp
chapter6/54_PyrAndResize/: 54_PyrAndResize.cpp
chapter6/55_threshold/: 55_threshold.cpp
chapter7/58_Laplacian/: 58_Laplacian.cpp
chapter7/60_EdgeDetection/: 60_EdgeDetection.cpp
chapter7/61_HoughLines/: 61_HoughLines.cpp
chapter7/63_HoughCircles/: 63_HoughCircles.cpp
chapter7/64_HoughLinesP/: 64_HoughLinesP.cpp
chapter7/66_remap2/: 66_remap2.cpp
chapter7/67_AffineTransform/: 67_AffineTransform.cpp
chapter7/68_equalizeHist/: 68_equalizeHist.cpp
chapter8/78_inpaint/: 78_inpaint.cpp
(+11 files in other folders)
